src/test/invalid/syntaxErr/variables/varNameIsInt.wacc
# variable declaration cannot be int

# Output:
# #syntax_error#

# Exit:
# 100


# Program:

begin
  int int = 42
end
